src/compiletest/qcell-03.stderr
error[E0502]: cannot borrow `owner` as mutable because it is also borrowed as immutable
  --> $DIR/qcell-03.rs:11:20
   |
10 |     let c1ref = owner.ro(&c1);
   |                 ----- immutable borrow occurs here
11 |     let c1mutref = owner.rw(&c1);    // Compile error
   |                    ^^^^^^^^^^^^^ mutable borrow occurs here
12 |     println!("{}", *c1ref);
   |                    ------ immutable borrow later used here
